使用jmh重构测试用例，并增加HashCode和toString的测试